--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -5,7 +5,7 @@
     {% for receita in receitas %}
     <div class="card">
         <div class="receita-tela-inicial">
-            <a href="" class="row d-flex justify-content-between align-items-center">
+            <a href="{{ receita.slug }}" class="row d-flex justify-content-between align-items-center">
                 {% if receita.fotos %}
                 <img src="{{ receita.fotos.url }}" alt="{{ receita.nome_receita }}" class="thumbnail img-thumbnail">
                 {% else %}
