--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -4,8 +4,8 @@
         <div id="dados-receita-completa">
             <div class="row">
                 <div id="titulo-receita-completa" class="col">
-                    <h3>Titulo da Receita</h3>
-                    <p>publicado por CookIt</p>
+                    <h3>{{ ingrediente.nome_receita }}</h3>
+                    <p>publicado por <strong>{{ ingrediente.dono_receita }}</strong></p>
                     <div>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -16,15 +16,9 @@
                 </div>
                 <div id="thumbnails-receita-completa" class="col">
                     <div class="row">
-                        <div class="col utensils-receita-completa rounded-circle">
-                            <i class="fas fa-utensils"></i>
-                        </div>
-                        <div class="col utensils-receita-completa rounded-circle">
-                            <i class="fas fa-utensils"></i>
-                        </div>
-                        <div class="col utensils-receita-completa rounded-circle">
-                            <i class="fas fa-utensils"></i>
-                        </div>
+                            {% if ingrediente.fotos %}
+                                    <img style="width:25%" src="{{ ingrediente.fotos.url }}" alt="{{ ingrediente.nome_receita }}">
+                            {% endif %}
                     </div>
                 </div>
                 <div id="opcoes-receita-completa" class="col-1">
@@ -40,19 +34,23 @@
                     <div class="icon-text-receita-completa">
                         <i class="far fa-clock"></i>
                         <br>
-                        <p>Tempo de preparo</p>
+                        <p>{{ingrediente.tempo_preparo}}{{ingrediente.tempo_unidade_medida}}</p>
                     </div>
                     <div class="line-receita-completa"></div>
                     <div class="icon-text-receita-completa">
                         <i class="fas fa-concierge-bell"></i>
                         <br>
-                        <p>Porções</p>
+                        {% if ingrediente.porcoes <= 1 %}
+                            <p>{{ingrediente.porcoes}} porção</p>
+                        {% else %}
+                            <p>{{ingrediente.porcoes}} porções</p>
+                        {% endif %}
                     </div>
                     <div class="line-receita-completa"></div>
                     <div class="icon-text-receita-completa">
                         <i class="fas fa-burn"></i>
                         <br>
-                        <p>Dificuldade</p>
+                        <p>Dificuldade: {{ingrediente.dificuldade}}</p>
                     </div>
                     <div class="line-receita-completa"></div>
                     <div class="icon-text-receita-completa">
@@ -70,47 +68,25 @@
                     <div class="icon-text-receita-completa">
                         <i class="far fa-calendar-alt"></i>
                         <br>
-                        <p>Data de publicação</p>
+                        <p>{{ingrediente.data_publicacao}}</p>
                     </div>
                 </div>
             </div>
             <div class="row">
+                {% for ingrediente in ingrediente.ingrediente_set.all %}
                 <div id="ingredientes-receita-completa" class="col">
                     <h3>Ingredientes</h3>
                     <ul>
                         <li>
-                            Ingrediente Um
-                        </li>
-                        <li>
-                            Ingrediente Dois
-                        </li>
-                        <li>
-                            Ingrediente Três
-                        </li>
-                        <li>
-                            Ingrediente Quatro
-                        </li>
-                        <li>
-                            Ingrediente Cinco
+                            {{ingrediente.unidadeMedida}} de 
+                            {{ingrediente.nome_ingrediente}}
                         </li>
                     </ul>
                 </div>
+                {% endfor %}
                 <div id="modo-de-preparo-receita-completa" class="col">
                     <h3>Modo de Preparo</h3>
-                    <ol>
-                        <li>
-                            Passo Um
-                        </li>
-                        <li>
-                            Passo Dois
-                        </li>
-                        <li>
-                            Passo Três
-                        </li>
-                        <li>
-                            Passo Quatro
-                        </li>
-                    </ol>
+                    <p>{{ingrediente.modo_preparo}}</p>
                 </div>
             </div>
             <div class="row">
@@ -129,7 +105,7 @@
                         <div id="dados-usuario-receita-completa" class="row">
                             <i class="fas fa-user-circle col-2"></i>
                             <div class="col">
-                                <h4>Nome do Usuário</h4>
+                                <h4>{{ingrediente.dono_receita}}</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu dapibus eros, at interdum odio. Integer at enim eu ligula fermentum gravida.
                                 </p>
                             </div>
@@ -137,7 +113,6 @@
                         <div id="icones-usuario-receita-completa" class="row">
                             <div class="col">
                                 <i class="far fa-images"></i>
-                                <p>Fotos</p>
                             </div>
                             <div class="col">
                                 <i class="fas fa-book"></i>
